--- a/CardGame/MainWindow.xaml
+++ b/CardGame/MainWindow.xaml
@@ -50,18 +50,29 @@
             Width="Auto"
             Height="Auto"
             HorizontalAlignment="Center"
+            VerticalAlignment="Bottom"
             HorizontalScrollBarVisibility="Auto"
             IsEnabled="False"
-            VerticalScrollBarVisibility="Hidden" 
-            VerticalAlignment="Bottom" />
+            VerticalScrollBarVisibility="Hidden" />
 
-        <StackPanel
-            x:Name="CardPack"
-            Grid.Row="1"
+        <ScrollViewer
+            x:Name="SProperty2"
+            Grid.Row="0"
             Grid.Column="0"
-            Width="300"
-            Height="300"
-            HorizontalAlignment="Right" />
+            HorizontalAlignment="Stretch"
+            HorizontalScrollBarVisibility="Hidden"
+            IsEnabled="False"
+            VerticalScrollBarVisibility="Hidden" />
+
+        <ScrollViewer
+            x:Name="SProperty1"
+            Grid.Row="2"
+            Grid.Column="0"
+            HorizontalAlignment="Stretch"
+            HorizontalScrollBarVisibility="Hidden"
+            IsEnabled="False"
+            VerticalScrollBarVisibility="Hidden" />
+
 
         <Button
             x:Name="ActionButton"
